Fixed dict-footer overlap

--- a/src/css/dictionary.css
+++ b/src/css/dictionary.css
@@ -61,6 +61,7 @@ table.termTable
 	white-space: pre-wrap;
 	margin-left: 1em;
 	width: 90%;
+	margin-bottom: 16px;
 }
 
 /* If the screen is too small for the alphabetical buttons */
